--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <section id="hero" class="section">
         <div class="background-overlay"></div> 
         
+        <div class="device-container">
+            <img src="s23fe_model.png" id="s23fe-model" alt="Samsung S23 FE" />
+        </div>
+
         <div class="hero-content">
             <h1 class="hero-heading">
                 <span class="line-1">THE GALAXY</span>
@@ -23,7 +27,7 @@
             <p class="hero-subtext anim-el">
                 Your trusted source for **One UI, S23 FE**, and the latest tech insights.
             </p>
-            <a href="Https://youtu.be/4NU7svzDAC4?si=ifuC49odCw0x5X0X" target="_blank" class="cta-button anim-el">
+            <a href="Https://m.youtube.com/watch?v=-co1VuiDGCE" target="_blank" class="cta-button anim-el">
                 WATCH LATEST VIDEO
             </a>
         </div>
@@ -45,7 +49,7 @@
             <div class="guide-card glass-effect anim-card" data-index="3">
                 <h3>Download Hub</h3>
                 <p>Direct links to official APKs, Good Lock Modules, and recommended tech accessories.</p>
-                <a href="https://www.youtube.com/watch?v=jgfeD1Qquyc1" target="_blank">Get Links →</a>
+                <a href="https://www.youtube.com/watch?v=5vvcqE10jyc6" target="_blank">Get Links →</a>
             </div>
         </div>
     </section>
@@ -54,7 +58,7 @@
         <h2 class="section-title anim-el">LATEST VIDEOS</h2>
         <div class="video-grid" id="video-container">
             </div>
-        <a href="https://www.youtube.com/watch?v=jgfeD1Qquyc2" target="_blank" class="cta-button anim-el small">
+        <a href="https://www.youtube.com/watch?v=5vvcqE10jyc7" target="_blank" class="cta-button anim-el small">
             VIEW ALL ON YOUTUBE
         </a>
     </section>
@@ -62,8 +66,8 @@
     <footer class="glass-effect">
         <p>© 2025 RoidTech Hub. Built by a fan.</p>
         <div class="social-links">
-            <a href="https://www.youtube.com/watch?v=jgfeD1Qquyc3" target="_blank">YouTube</a>
-            <a href="https://twitter.com/RoidTech" target="_blank">Twitter</a>
+            <a href="https://www.youtube.com/watch?v=5vvcqE10jyc8" target="_blank">YouTube</a>
+            <a href="https://www.instagram.com/roid.tech" target="_blank">Instagram</a>
             </div>
     </footer>
 
